Attemping to fix white space

--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -7,6 +7,11 @@
  */
 
 html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
